Avoid problem h1 wrapping on mobile

--- a/leaderboard_generator/leaderboard/static/css/leaderboard.css
+++ b/leaderboard_generator/leaderboard/static/css/leaderboard.css
@@ -73,7 +73,7 @@ h1 {
 
 @media (max-width: 700px) {
   h1 {
-    font-size: 50px;
+    font-size: 34px;
   }
 
   h2 {
